src/network_policies/test2monitoring-rome-a2d9d210 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test2monitoring-rome-a2d9d210
  namespace: monitoring-rome-a2d9d2
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: resource-monitor
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 142.250.0.0/15
